min height and max width added for the web3-image

--- a/src/style.css
+++ b/src/style.css
@@ -129,12 +129,10 @@ li {
     }
 }
 
-
 .web3-image {
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    max-width: 100%;
 }
-
 
 .main-article-title {
     width: 100%;
